// =========================
// ENUMS
// =========================
Enum role_type {
  super_admin
  administrator
  staff
  user
}

Enum order_status {
  pending
  paid
  shipped
  completed
  cancelled
}

Enum invoice_status {
  unpaid
  paid
  expired
}

Enum payment_type {
  bank_transfer
  ewallet
  qris
}

// =========================
// CATALOG
// =========================
Table categories {
  id bigint [pk, increment]
  name varchar
  slug varchar [unique]
  created_by int
  created_at datetime
  updated_at datetime
}

Table products {
  id bigint [pk, increment]
  category_id bigint [not null]
  sku varchar [unique]
  name varchar
  slug varchar [unique]
  description text
  detail text
  stock int [default: 0]
  unit_price decimal(12,2)
  is_active boolean [default: true]
  created_by int
  created_at datetime
  updated_at datetime

  Indexes {
    category_id
  }
}

Table product_images {
  id bigint [pk, increment]
  product_id bigint [not null]
  image_path varchar
  is_primary boolean [default: false]

  Indexes {
    product_id
  }
}

Table product_motifs {
  id bigint [pk, increment]
  product_id bigint [not null]
  name varchar
  additional_price decimal(12,2) [default: 0]

  Indexes {
    (id, product_id) [unique]
    product_id
  }
}

Table product_motif_images {
  id bigint [pk, increment]
  product_motif_id bigint [not null]
  image_path varchar
  is_primary boolean [default: false]

  Indexes {
    product_motif_id
  }
}

Table product_sizes {
  id bigint [pk, increment]
  product_id bigint [not null]
  name varchar
  additional_price decimal(12,2) [default: 0]
  stock int [default: 0]

  Indexes {
    (id, product_id) [unique]
    product_id
  }
}

// =========================
// USERS & ADDRESS
// =========================
Table users {
  id bigint [pk, increment]
  name varchar
  email varchar [unique]
  password varchar
  phone varchar
  role role_type [not null, default: 'user']
  created_at datetime
  updated_at datetime
}
 
Table addresses {
  id bigint [pk, increment]
  user_id bigint [not null, unique] // <= 1 user = 1 address
  recipient_name varchar
  province varchar
  address_detail text
  city varchar
  district varchar
  sub_district varchar
  postal_code varchar
  created_at datetime
  updated_at datetime
}

// =========================
// CART
// =========================
Table carts {
  id bigint [pk, increment]
  user_id bigint [not null, unique] // 1 user = 1 cart aktif
  created_at datetime
  updated_at datetime
}

Table cart_items {
  id bigint [pk, increment]
  cart_id bigint [not null]
  product_id bigint [not null]
  motif_id bigint
  size_id bigint
  quantity int [not null, default: 1]
  unit_price decimal(12,2) [not null]
  subtotal decimal(12,2) [not null]

  Indexes {
    cart_id
    product_id
    (cart_id, product_id, motif_id, size_id) [unique]
  }
}

// =========================
// PAYMENT METHOD
// =========================
Table payment_methods {
  id bigint [pk, increment]
  name varchar
  type payment_type
  account_number varchar
  account_name varchar
  is_active boolean [default: true] 
  created_by int
  created_at datetime
  updated_at datetime
}

// =========================
// ORDER & INVOICE
// =========================
Table orders {
  id bigint [pk, increment]
  user_id bigint [not null]
  payment_method_id bigint
  cart_id bigint
  order_number varchar [unique]

  // shipping alamat snapshot
  recipient_name varchar
  recipient_phone varchar
  recipient_address text
  recipient_city varchar
  recipient_province varchar
  recipient_district varchar
  recipient_sub_district varchar
  recipient_postal_code varchar
  shipping_note text

  total_amount decimal(12,2) [not null, default: 0]
  status order_status [default: 'pending']
  created_by int
  created_at datetime
  updated_at datetime

  Indexes {
    user_id
    payment_method_id
  }
}

Table order_items {
  id bigint [pk, increment]
  order_id bigint [not null]
  product_id bigint [not null]
  motif_id bigint
  size_id bigint

  quantity int
  weight_in_gram int

  unit_price decimal(12,2) [not null]
  subtotal decimal(12,2) [not null]

  Indexes {
    order_id
    product_id
  }
}

Table invoices {
  id bigint [pk, increment]
  order_id bigint [not null, unique] // 1 order 1 invoice
  invoice_number varchar [unique]
  invoice_date datetime
  price_total decimal(12,2) [not null]
  status invoice_status [default: 'unpaid']
  created_at datetime
}

// =========================
// CMS: GALLERY, BLOG, ABOUT
// =========================
Table galleries {
  id bigint [pk, increment]
  title varchar
  image_path varchar
  created_by int
  created_at datetime
  updated_at datetime
} 

Table blogs {
  id bigint [pk, increment]
  title varchar
  slug varchar [unique]
  image_path varchar
  content text
  is_published boolean [default: true]
  created_by int
  created_at datetime
  updated_at datetime
}

Table about {
  id bigint [pk, increment]
  title varchar
  image_path varchar
  content text
  created_by int
  created_at datetime
  updated_at datetime
}

Table social_media {
  id bigint [pk, increment]
  name varchar
  link varchar
  image_path varchar
  created_by int
  created_at datetime
  updated_at datetime
}

// =========================
// RELATIONSHIPS
// =========================
// ---- CATALOG
Ref: products.category_id > categories.id
Ref: product_images.product_id > products.id
Ref: product_motifs.product_id > products.id
Ref: product_motif_images.product_motif_id > product_motifs.id
Ref: product_sizes.product_id > products.id

// ---- USERS & ADDRESS (1 user : 1 address via unique user_id)
Ref: addresses.user_id > users.id

// ---- CART (1 user : 1 cart via unique user_id)
Ref: carts.user_id > users.id
Ref: cart_items.cart_id > carts.id
Ref: cart_items.product_id > products.id

// Motif & Ukuran Harus Milik product_id Yang Sama
Ref: cart_items.(motif_id, product_id) > product_motifs.(id, product_id)
Ref: cart_items.(size_id, product_id) > product_sizes.(id, product_id)

// ---- ORDERS
Ref: orders.user_id > users.id
Ref: orders.payment_method_id > payment_methods.id
Ref: orders.cart_id > carts.id

Ref: order_items.order_id > orders.id
Ref: order_items.product_id > products.id

// Motif & Ukuran Harus Milik product_id Yang Sama
Ref: order_items.(motif_id, product_id) > product_motifs.(id, product_id)
Ref: order_items.(size_id, product_id) > product_sizes.(id, product_id)

// ---- INVOICE (1 order : 1 invoice via unique order_id)
Ref: invoices.order_id > orders.id